# lighters

./: .gitignore  Cargo.toml  README.md  deny.toml
examples/runtime/: Cargo.toml
examples/runtime/src/: lib.rs
examples/wgsl/: Cargo.toml
examples/wgsl/src/: collatz.wgsl  main.rs  sum_reduce.wgsl  sum_reduce2.wgsl  sum_scan.wgsl
examples/with_lighters/: Cargo.toml
examples/with_lighters/src/: main.rs
examples/with_wgsl/: Cargo.toml
examples/with_wgsl/src/: collatz.wgsl  main.rs  sum_reduce.wgsl  sum_scan.wgsl
src/: algorithms.rs  arguments.rs  block.rs  emitter.rs  functions.rs  lib.rs  main.rs  types.rs  value.rs
src/functions/: entry_point.rs
src/value/: entry_point.rs  ops.rs
