[package]
name = "lighters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22.0"
id-arena = "2.2.1"
# We include wgsl-in *only* for rust-analyzer browsing
naga = { version = "0.10.0", features = ["span", "wgsl-out", "wgsl-in"] }
