[workspace]
members = ["examples/*"]
resolver = "2"

[package]
name = "lighters"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.0"
# We include wgsl-in *only* for rust-analyzer browsing
naga = { workspace = true, features = [
    # "span",
    # "wgsl-out",
    # "wgsl-in",
    # "validate",
] }

[workspace.dependencies]
naga = "0.12.0"
wgpu = { version = "0.16", default_features = false }
runtime = { path = "examples/runtime" }
lighters = { path = "." }
