[package]
name = "with_lighters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wgpu = { workspace = true, features = ["naga"] }

lighters = { workspace = true }
runtime = { workspace = true }
naga = { workspace = true, features = ["wgsl-out"] }

pollster = "0.3.0"
